Added sudo-selectors to load css with css-loader.

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,29 @@
   color: red;
 }
 
+.App button {
+  background-color: green;
+  color: white;
+  border: 1px solid green;
+  border-radius: 12px;
+  cursor: pointer;
+  padding: 8px;
+}
+
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+.App button.red {
+  background-color: red;
+}
+
+.App button.red:hover {
+  background-color: lightred;
+  color: black;
+}
+
 /* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
